<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/TextView_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="80sp"
            android:maxLines="3"
            android:gravity="bottom|right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginBottom="7dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:textColor="#00CC00"
            android:background="@drawable/change1"
            android:text="@string/c"
            tools:ignore="NestedWeights"
            android:layout_marginEnd="7dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_divede"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:textColor="#00CC00"
            android:background="@drawable/change1"
            android:text="@string/divide"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#00CC00"
            android:layout_marginRight="7dp"
            android:background="@drawable/change1"
            android:text="@string/multiply"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#00CC00"
            android:background="@drawable/change1"
            android:text="@string/del"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:layout_marginBottom="7dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/change"
            android:layout_marginRight="7dp"
            android:text="@string/_7"
            tools:ignore="NestedWeights"
            android:layout_marginEnd="7dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/change"
            android:layout_marginRight="7dp"
            android:text="@string/_8"
            android:layout_marginEnd="7dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_9"
            android:layout_marginEnd="7dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_reduce"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#00cc00"
            android:background="@drawable/change1"
            android:text="@string/minus"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_4"
            android:layout_marginEnd="7dp"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_5"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_6"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#00FF00"
            android:background="@drawable/change1"
            android:text="@string/plus"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_1"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_2"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_3"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/change1"
            android:textColor="#00CC00"
            android:text="@string/point"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_leftparenthesis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change1"
            android:textColor="#00CC00"
            android:text="@string/left_bracket"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:background="@drawable/change"
            android:text="@string/_0"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_rightparenthesis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#00CC00"
            android:layout_marginRight="7dp"
            android:background="@drawable/change1"
            android:text="@string/right_parenthesis"
            android:layout_marginEnd="7dp" />
        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#00CC00"
            android:background="@drawable/change1"
            android:text="@string/equals"/>

    </LinearLayout>

    
</LinearLayout>
